--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 
+
 # testing
 /coverage
 
@@ -21,3 +22,13 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/src/HelloTest.js
+/src/App.js
+
+/src/App.test.js
+
+/src/HelloTest.css
+/src/App.css
+
+/src/logo.svg
